--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -1,2 +1,7 @@
 // Use this file to define style overrides for @edx/paragon
 // This file is included after all Paragon styles, but should generally avoid using private mixins in Paragon.
+#root .layout {
+    background-image: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0'); /* or use another URL */
+    background-size: cover; /* Ensures the image covers the entire area */
+    background-position: center; /* Centers the image */
+}
