--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -4,4 +4,12 @@
     background-image: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0'); /* or use another URL */
     background-size: cover; /* Ensures the image covers the entire area */
     background-position: center; /* Centers the image */
+    
+}
+root .layout .content #main-content .btn-brand {
+    background-color: #;
+    border-color: #568954;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 30px;
 }
