--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -7,7 +7,7 @@
     
 }
 root .layout .content #main-content .btn-brand {
-    border-color: #568954;
+    border-color: #FFFFFF;
     font-size: 24px;
     font-weight: 500;
     line-height: 30px;
